// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropDown Test should render correctly 1`] = `
<View>
  <Styled(View)
    data={
      Array [
        Object {
          "id": "accountOverview",
          "label": "ACCOUNT OVERVIEW",
          "value": "accountOverviewMobile",
        },
        Object {
          "id": "myPlaceRewards",
          "label": "MY PLACE REWARDS",
          "value": "myPlaceRewardsMobile",
        },
        Object {
          "id": "myWallet",
          "label": "MY WALLET",
          "value": "myWalletPageMobile",
        },
        Object {
          "id": "earnExtraPoints",
          "label": "EARN EXTRA POINTS",
          "value": "earnExtraPointsPageMobile",
        },
        Object {
          "id": "profileInformation",
          "label": "PROFILE INFORMATION",
          "value": "profileInformationMobile",
        },
        Object {
          "id": "addressBook",
          "label": "ADDRESS BOOK",
          "value": "addressBookMobile",
        },
        Object {
          "id": "paymentGiftCards",
          "label": "PAYMENT & GIFT CARDS",
          "value": "paymentGiftCardsPageMobile",
        },
        Object {
          "id": "myPreferences",
          "label": "MY PREFERENCES",
          "value": "myPreferencePageMobile",
        },
        Object {
          "id": "myPlaceRewardsCC",
          "label": "MY PLACE REWARDS CREDIT CARD",
          "value": "myPlaceRewardsCCPageMobile",
        },
      ]
    }
    onLayout={[Function]}
    onStartShouldSetResponder={[Function]}
    onValueChange={[MockFunction]}
    selectedValue="addressBookMobile"
  >
    <Styled(Styled(Text))>
      ADDRESS BOOK
    </Styled(Styled(Text))>
    <Image
      source={
        Object {
          "testUri": "../../../../core/src/assets/carrot-small-down.png",
        }
      }
    />
  </Styled(View)>
  <Component
    hardwareAccelerated={false}
    transparent={true}
    visible={false}
  >
    <Styled(TouchableOpacity)
      accessibilityComponentType="none"
      accessibilityTraits="none"
      activeOpacity={1}
      onPress={[Function]}
      style={
        Object {
          "left": -1,
          "top": -1,
          "width": -1,
        }
      }
    >
      <Styled(View) />
    </Styled(TouchableOpacity)>
  </Component>
</View>
`;

exports[`DropDown Test test modal 1`] = `
<View>
  <Styled(View)
    data={
      Array [
        Object {
          "id": "accountOverview",
          "label": "ACCOUNT OVERVIEW",
          "value": "accountOverviewMobile",
        },
        Object {
          "id": "myPlaceRewards",
          "label": "MY PLACE REWARDS",
          "value": "myPlaceRewardsMobile",
        },
        Object {
          "id": "myWallet",
          "label": "MY WALLET",
          "value": "myWalletPageMobile",
        },
        Object {
          "id": "earnExtraPoints",
          "label": "EARN EXTRA POINTS",
          "value": "earnExtraPointsPageMobile",
        },
        Object {
          "id": "profileInformation",
          "label": "PROFILE INFORMATION",
          "value": "profileInformationMobile",
        },
        Object {
          "id": "addressBook",
          "label": "ADDRESS BOOK",
          "value": "addressBookMobile",
        },
        Object {
          "id": "paymentGiftCards",
          "label": "PAYMENT & GIFT CARDS",
          "value": "paymentGiftCardsPageMobile",
        },
        Object {
          "id": "myPreferences",
          "label": "MY PREFERENCES",
          "value": "myPreferencePageMobile",
        },
        Object {
          "id": "myPlaceRewardsCC",
          "label": "MY PLACE REWARDS CREDIT CARD",
          "value": "myPlaceRewardsCCPageMobile",
        },
      ]
    }
    onLayout={[Function]}
    onStartShouldSetResponder={[Function]}
    onValueChange={
      [MockFunction] {
        "calls": Array [
          Array [
            "foo",
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    selectedValue="addressBookMobile"
  >
    <Styled(Styled(Text))>
      ADDRESS BOOK
    </Styled(Styled(Text))>
    <Image
      source={
        Object {
          "testUri": "../../../../core/src/assets/carrot-small-up.png",
        }
      }
    />
  </Styled(View)>
  <Component
    hardwareAccelerated={false}
    transparent={true}
    visible={true}
  >
    <Styled(TouchableOpacity)
      accessibilityComponentType="none"
      accessibilityTraits="none"
      activeOpacity={1}
      onPress={[Function]}
      style={
        Object {
          "left": -1,
          "top": -1,
          "width": -1,
        }
      }
    >
      <Styled(View)>
        <FlatList
          ItemSeparatorComponent={[Function]}
          data={
            Array [
              Object {
                "id": "accountOverview",
                "label": "ACCOUNT OVERVIEW",
                "value": "accountOverviewMobile",
              },
              Object {
                "id": "myPlaceRewards",
                "label": "MY PLACE REWARDS",
                "value": "myPlaceRewardsMobile",
              },
              Object {
                "id": "myWallet",
                "label": "MY WALLET",
                "value": "myWalletPageMobile",
              },
              Object {
                "id": "earnExtraPoints",
                "label": "EARN EXTRA POINTS",
                "value": "earnExtraPointsPageMobile",
              },
              Object {
                "id": "profileInformation",
                "label": "PROFILE INFORMATION",
                "value": "profileInformationMobile",
              },
              Object {
                "id": "addressBook",
                "label": "ADDRESS BOOK",
                "value": "addressBookMobile",
              },
              Object {
                "id": "paymentGiftCards",
                "label": "PAYMENT & GIFT CARDS",
                "value": "paymentGiftCardsPageMobile",
              },
              Object {
                "id": "myPreferences",
                "label": "MY PREFERENCES",
                "value": "myPreferencePageMobile",
              },
              Object {
                "id": "myPlaceRewardsCC",
                "label": "MY PLACE REWARDS CREDIT CARD",
                "value": "myPlaceRewardsCCPageMobile",
              },
            ]
          }
          disableVirtualization={false}
          horizontal={false}
          initialNumToRender={10}
          keyExtractor={[Function]}
          maxToRenderPerBatch={10}
          numColumns={1}
          onEndReachedThreshold={2}
          removeClippedSubviews={false}
          renderItem={[Function]}
          scrollEventThrottle={50}
          updateCellsBatchingPeriod={50}
          windowSize={21}
        />
      </Styled(View)>
    </Styled(TouchableOpacity)>
  </Component>
</View>
`;
